fix card overlapping.

--- a/src/app/sidebar/feed/feed.component.scss
+++ b/src/app/sidebar/feed/feed.component.scss
@@ -2,6 +2,10 @@
   margin:20px;
 }
 
+.heading-bounds{
+  margin-left: 40px;
+}
+
 .fab-container {
   position: fixed;
   bottom: 50px;
